--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
+    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
