--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,6 @@ repositories {
 dependencies {
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
     compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
+    compile group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.11.RELEASE'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
