--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
     compile group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.11.RELEASE'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.1.1'
 }
