--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.11.RELEASE'
     compile group: 'org.freemarker', name: 'freemarker', version: '2.3.28'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
+    compile group: 'org.apache.commons', name: 'commons-text', version: '1.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.1.1'
 }
