--- a/build.gradle
+++ b/build.gradle
@@ -20,5 +20,5 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-text', version: '1.6'
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.8.0-beta2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.1.1'
+    compile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.1.1'
 }
