--- a/pom.xml
+++ b/pom.xml
@@ -36,44 +36,55 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <selenium.version>3.141.59</selenium.version>
+        <freemaker.version>2.3.28</freemaker.version>
+        <jackson.version>2.9.8</jackson.version>
+        <apachecommons.version>1.6</apachecommons.version>
+        <slf4j.version>1.8.0-beta2</slf4j.version>
+        <junit.version>4.12</junit.version>
+        <webdrivermanager.version>3.2.0</webdrivermanager.version>
+        <mavenshadeplugin.version>3.2.1</mavenshadeplugin.version>
+        <nexusstagingplugin.version>1.6.7</nexusstagingplugin.version>
+        <gpgplugin.version>1.5</gpgplugin.version>
+        <javadocplugin.version>2.9.1</javadocplugin.version>
+        <mavensourceplugin.version>2.2.1</mavensourceplugin.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.141.59</version>
+            <version>${selenium.version}</version>
         </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>2.3.28</version>
+            <version>${freemaker.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.8</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
-            <version>1.6</version>
+            <version>${apachecommons.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.8.0-beta2</version>
-            <scope>test</scope>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>3.2.0</version>
+            <version>${webdrivermanager.version}</version>
         </dependency>
     </dependencies>
     <build>
@@ -81,7 +92,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>${mavenshadeplugin.version}</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -94,7 +105,7 @@
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.7</version>
+                <version>${nexusstagingplugin.version}</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
@@ -105,7 +116,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>${mavensourceplugin.version}</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -118,7 +129,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>${javadocplugin.version}</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -131,7 +142,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.5</version>
+                <version>${gpgplugin.version}</version>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
