--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
 }
 
 group 'io.github.sridharbandi'
@@ -8,6 +9,11 @@ version '1.0.0-beta1'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+jacoco {
+    toolVersion = "0.8.4"
+    reportsDir = file("$buildDir/customJacocoReportDir")
+}
+
 ext {
     seleniumVersion = '3.141.59'
     webdrivermanagerVersion = '3.2.0'
@@ -15,7 +21,16 @@ ext {
     jacksonVersion = '2.9.8'
     apachecommonsVersion = '1.6'
     slf4jVersion = '1.8.0-beta2'
-    junitVersion = '4.12'
+    junitVersion = '5.4.0'
+    mockitoVersion = '3.0.0'
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination file("${buildDir}/jacocoHtml")
+    }
 }
 
 repositories {
@@ -29,5 +44,12 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
     compile "org.apache.commons:commons-text:${apachecommonsVersion}"
     compile "org.slf4j:slf4j-log4j12:${slf4jVersion}"
-    testCompile "junit:junit:${junitVersion}"
+    testCompile "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testCompile "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
+    testCompile "org.mockito:mockito-core:${mockitoVersion}"
+    testCompile "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
+}
+
+test {
+    useJUnitPlatform()
 }
