--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,8 @@
         <jackson.version>2.9.8</jackson.version>
         <apachecommons.version>1.6</apachecommons.version>
         <slf4j.version>1.8.0-beta2</slf4j.version>
-        <junit.version>4.12</junit.version>
+        <junit.version>5.4.0</junit.version>
+        <mockito.verion>3.0.0</mockito.verion>
         <webdrivermanager.version>3.2.0</webdrivermanager.version>
         <mavenshadeplugin.version>3.2.1</mavenshadeplugin.version>
         <nexusstagingplugin.version>1.6.7</nexusstagingplugin.version>
@@ -76,9 +77,27 @@
             <version>${slf4j.version}</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.verion}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito.verion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -156,6 +175,24 @@
                                 <arg>loopback</arg>
                             </gpgArguments>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <executions>
+                    <execution>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report-only</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
