--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'io.github.sridharbandi'
-version '1.1.0-beta2'
+version '2.0-alpha-1'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -22,7 +22,7 @@ ext {
     apachecommonsVersion = '1.6'
     slf4jVersion = '1.8.0-beta2'
     junitVersion = '5.4.0'
-    mockitoVersion = '3.0.0'
+    mockitoVersion = '3.2.4'
 }
 
 jacocoTestReport {
