--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'io.github.sridharbandi'
-version '2.0-alpha-1'
+version '2.0-alpha-2'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -20,7 +20,7 @@ ext {
     jacksonVersion = '2.10.1'
     apachecommonsVersion = '1.6'
     commonsVersion = '2.6'
-    slf4jVersion = '1.8.0-beta2'
+    slf4jVersion = '2.0.0-alpha1'
     junitVersion = '5.4.0'
     mockitoVersion = '3.2.4'
 }
