--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.sridharbandi</groupId>
     <artifactId>java-a11y</artifactId>
-    <version>2.0-alpha-1</version>
+    <version>2.0-alpha-2</version>
 
     <name>Java a11y</name>
     <description>Accessibility Automation for Web Apps with Java and Selenium Webdriver</description>
@@ -41,7 +41,7 @@
         <jackson.version>2.10.1</jackson.version>
         <apachecommons.version>1.6</apachecommons.version>
         <commons.version>2.6</commons.version>
-        <slf4j.version>1.8.0-beta2</slf4j.version>
+        <slf4j.version>2.0.0-alpha1</slf4j.version>
         <junit.version>5.4.0</junit.version>
         <mockito.verion>3.2.4</mockito.verion>
     </properties>
