--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.sridharbandi</groupId>
     <artifactId>java-a11y</artifactId>
-    <version>2.0-alpha-2</version>
+    <version>2.1.1</version>
 
     <name>Java a11y</name>
     <description>Accessibility Automation for Web Apps with Java and Selenium Webdriver</description>
