--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'io.github.sridharbandi'
-version '2.0-alpha-2'
+version '2.1.2'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
