--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,9 @@
         <annotation.version>1.3.2</annotation.version>
         <surefire.version>3.0.0-M5</surefire.version>
 
-        <sonar.organization>sridharbandi</sonar.organization>
+      <!--  <sonar.organization>sridharbandi</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <sonar.jacoco.reportPaths>${project.basedir}</sonar.jacoco.reportPaths>
+        <sonar.jacoco.reportPaths>${project.basedir}</sonar.jacoco.reportPaths>-->
     </properties>
 
     <dependencies>
@@ -105,22 +105,25 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.5</version>
+                <version>0.8.7</version>
                 <configuration>
                     <excludes>
                         <exclude>io/github/sridharbandi/modal/**/*</exclude>
                     </excludes>
+                    <formats>
+                        <format>XML</format>
+                    </formats>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
                 </configuration>
                 <executions>
                     <execution>
-                        <id>prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>prepare-package</phase>
+                        <phase>test</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
