--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,7 @@
         <commonsio.version>2.11.0</commonsio.version>
         <annotation.version>1.3.2</annotation.version>
         <surefire.version>3.0.0-M5</surefire.version>
-
-      <!--  <sonar.organization>sridharbandi</sonar.organization>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <sonar.jacoco.reportPaths>${project.basedir}</sonar.jacoco.reportPaths>-->
+        <jacoco.version>0.8.7</jacoco.version>
     </properties>
 
     <dependencies>
@@ -105,7 +102,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version>
+                <version>${jacoco.version}</version>
                 <configuration>
                     <excludes>
                         <exclude>io/github/sridharbandi/modal/**/*</exclude>
