--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,16 @@
             <version>${mockito.verion}</version>
             <scope>test</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.0.3</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
