--- a/pom.xml
+++ b/pom.xml
@@ -36,16 +36,16 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <freemaker.version>2.3.30</freemaker.version>
-        <slf4j.version>2.0.0-alpha1</slf4j.version>
-        <junit.version>5.7.0</junit.version>
-        <mockito.verion>3.7.0</mockito.verion>
-        <selenium.version>4.0.0-rc-2</selenium.version>
-        <jackson.version>2.12.1</jackson.version>
+        <freemaker.version>2.3.31</freemaker.version>
+        <slf4j.version>2.0.3</slf4j.version>
+        <junit.version>5.9.1</junit.version>
+        <mockito.verion>4.8.1</mockito.verion>
+        <selenium.version>4.5.3</selenium.version>
+        <jackson.version>2.14.0-rc3</jackson.version>
         <commonsio.version>2.11.0</commonsio.version>
         <annotation.version>1.3.2</annotation.version>
         <surefire.version>3.0.0-M5</surefire.version>
-        <jacoco.version>0.8.7</jacoco.version>
+        <jacoco.version>0.8.8</jacoco.version>
     </properties>
 
     <dependencies>
@@ -66,7 +66,7 @@
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
+            <artifactId>slf4j-reload4j</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
         <dependency>
